--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 similarity.pkl filter=lfs diff=lfs merge=lfs -text
 *.pkl filter=lfs diff=lfs merge=lfs -text
+data filter=lfs diff=lfs merge=lfs -text
